# keisanki3

./: bugs.txt
addr/: addr.cabal  addrtest  stack.yaml  test.addr
addr/addrs/: arith.addr  array.addr  cmp.addr  fib.addr  gcd.addr  global.addr  logic.addr  scope.addr  swap.addr  while.addr
addr/app/: Main.hs
compilerModules/: README.md  compilerModules.cabal
compilerModules/src/: AddrTypeDef.hs  Address.hs  CFG.hs  ConvertToDecl.hs  Gen.hs  GenTypeDef.hs  Ir.hs  IrTypeDef.hs  Lexer.hs  ObjectCollect.hs  RemoveSugar.hs  Reverser.hs  SemanticTypeDef.hs  TypeDef.hs
final-template/: run  run-normal  run-opt  run-test  run-test-opt
final-template/demo/compilerModules/: compilerModules.cabal
final-template/demo/compilerModules/src/: Address.hs  CFGTypeDef.hs  ConvertToDecl.hs  DFA.hs  DFATypeDef.hs  Gen.hs  GenTypeDef.hs  Ir.hs  IrTypeDef.hs  Lexer.hs  ObjectCollect.hs  ParserFunc.hs  ReverseNode.hs  Reverser.hs
final-template/demo/opt/: README.md  opt-exe  stack.yaml
final-template/demo/opt/app/: Main.hs
final-template/sample/: test.s
ir/: README.md  ir.cabal  stack.yaml
ir/app/: Main.hs
oldDirs/excutive/: parser.hs  reverse.hs  sugar.hs
oldDirs/modules/: Lexer.hs  ParserFunc.hs  RemoveSugar.hs  Reverser.hs  TypeDef.hs
opt/: opt.cabal  stack.yaml  test.dfa
opt/app/: Main.hs
parser/: README.md  parser.cabal
parser/app/: Main.hs
reverse/: README.md  reverse.cabal  stack.yaml
reverse/app/: Main.hs
semantic/: semantic.cabal  stack.yaml
semantic/app/: Main.hs
sugar/: README.md  stack.yaml  sugar.cabal
sugar/app/: Main.hs
