name:                opt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
copyright:           2016 Author name here
build-type:          Simple
cabal-version:       >=1.10

executable opt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , compilerModules
                     , containers
                     , mtl

  default-language:    Haskell2010
