name:                parser
version:             0.1.0.0
synopsis:            parser for small C
description:         Please see README.md
copyright:           2016 Y.T.
build-type:          Simple
cabal-version:       >=1.10


executable parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , compilerModules
  default-language:    Haskell2010

